[gd_scene load_steps=10 format=3 uid="uid://bxk2ecbtvcqyy"]

[ext_resource type="Script" path="res://title_screen.gd" id="1_erk5f"]
[ext_resource type="FontFile" uid="uid://chh4mn3cebhse" path="res://Fonts/digital-7.ttf" id="1_us4qe"]
[ext_resource type="Texture2D" uid="uid://dv841x3d4hxrx" path="res://Assets/StartButton.png" id="3_abda5"]
[ext_resource type="AudioStream" uid="uid://cukolmocybkj0" path="res://Assets/click.ogg" id="3_c8rd5"]
[ext_resource type="Texture2D" uid="uid://cnimawxms1q0w" path="res://Assets/Title.png" id="4_3nnoj"]
[ext_resource type="Texture2D" uid="uid://dfo82dllc3rcr" path="res://Assets/StartButtonOn.png" id="5_jgaek"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w2i5w"]
texture = ExtResource("5_jgaek")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xk7qo"]
texture = ExtResource("3_abda5")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ccq0w"]
texture = ExtResource("5_jgaek")

[node name="title_screen" type="Node2D"]
script = ExtResource("1_erk5f")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -9
offset_left = -232.0
offset_top = -128.0
offset_right = 1384.0
offset_bottom = 792.0
texture = ExtResource("4_3nnoj")

[node name="Label" type="Label" parent="."]
z_index = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 360.0
offset_top = 16.0
offset_right = 791.0
offset_bottom = 89.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_us4qe")
theme_override_font_sizes/font_size = 100
text = "CLOCKING IN"

[node name="ColorRect" type="ColorRect" parent="Label"]
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.5
offset_top = -17.5
offset_right = -40.5
offset_bottom = -17.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.5)
size_flags_horizontal = 10
size_flags_vertical = 6
color = Color(0, 0, 0, 1)

[node name="StartButton" type="Sprite2D" parent="Label"]
z_index = -2
position = Vector2(216, 40)
scale = Vector2(3.84, 1.92)
texture = ExtResource("3_abda5")

[node name="Button" type="Button" parent="."]
z_index = 10
offset_left = 408.0
offset_top = 272.0
offset_right = 744.0
offset_bottom = 368.0
focus_mode = 0
theme_override_fonts/font = ExtResource("1_us4qe")
theme_override_font_sizes/font_size = 35
theme_override_styles/hover = SubResource("StyleBoxTexture_w2i5w")
theme_override_styles/normal = SubResource("StyleBoxTexture_xk7qo")
text = "WAKE UP"

[node name="Exit" type="Button" parent="."]
z_index = 10
offset_left = 408.0
offset_top = 448.0
offset_right = 744.0
offset_bottom = 544.0
focus_mode = 0
theme_override_fonts/font = ExtResource("1_us4qe")
theme_override_font_sizes/font_size = 35
theme_override_styles/hover = SubResource("StyleBoxTexture_ccq0w")
theme_override_styles/normal = SubResource("StyleBoxTexture_xk7qo")
text = "EXIT"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 326)

[node name="sfx_click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_c8rd5")
volume_db = 6.611

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
